--- a/hlibsass.cabal
+++ b/hlibsass.cabal
@@ -7,7 +7,7 @@ author:              Jakub Fijałkowski
 maintainer:          fiolek94@gmail.com
 -- copyright:           
 category:            Foreign
-build-type:          Simple
+build-type:          Custom
 cabal-version:       >=1.10
 
 extra-source-files:
@@ -16,6 +16,8 @@ extra-source-files:
   libsass/b64/*.h
   libsass/posix/*.h
   libsass/utf8/*.h
+  libsass/Makefile
+  libsass/LICENSE
 
 library
   exposed-modules:
@@ -24,3 +26,5 @@ library
   hs-source-dirs:      .
   default-language:    Haskell2010
   default-extensions:  ForeignFunctionInterface
+  extra-libraries:     sass
+  ghc-options:         -pgml g++
