--- a/hlibsass.cabal
+++ b/hlibsass.cabal
@@ -21,7 +21,10 @@ extra-source-files:
 
 library
   exposed-modules:
-    Binding.Sass
+    Binding.Libsass,
+    Binding.Libsass.Types,
+    Binding.Libsass.Wrappers,
+    Binding.Libsass.Context
   build-depends:       base >=4.7 && <4.8
   hs-source-dirs:      .
   default-language:    Haskell2010
