--- a/hlibsass.cabal
+++ b/hlibsass.cabal
@@ -25,7 +25,8 @@ library
     Binding.Libsass.Types,
     Binding.Libsass.Wrappers,
     Binding.Libsass.Context,
-    Binding.Libsass.Functions
+    Binding.Libsass.Functions,
+    Binding.Libsass.Values
   build-depends:       base >=4.7 && <4.8
   hs-source-dirs:      .
   default-language:    Haskell2010
