--- a/hlibsass.cabal
+++ b/hlibsass.cabal
@@ -43,3 +43,11 @@ library
   default-extensions:  ForeignFunctionInterface
   extra-libraries:     sass
   ghc-options:         -Wall -pgml g++
+
+test-suite tests
+  hs-source-dirs:      tests
+  main-is:             Main.hs
+  type:                exitcode-stdio-1.0
+  ghc-options:         -Wall -pgml g++
+  build-depends:       base >= 4.7 && <4.8, hspec, hlibsass
+  default-language:    Haskell2010
