--- a/hlibsass.cabal
+++ b/hlibsass.cabal
@@ -12,8 +12,8 @@ synopsis:            Low-level bindings to libsass 3.2.0-beta.5-16
 description:
   This package provides (very) low level bindings to libsass. It uses libsass
   compiled to static library, so if you use this in your project, you have to
-  link your project with C++ runtime. The easiest option is to pass @-pgml g++@
-  option to the ghc (preferably specified in .cabal file).
+  link your project with C++ runtime(which libsass does automatically - links
+  with libstd++).
   For documentation visit <https://github.com/sass/libsass>.
 
 
@@ -42,12 +42,13 @@ library
   default-language:    Haskell2010
   default-extensions:  ForeignFunctionInterface
   extra-libraries:     sass
-  ghc-options:         -Wall -pgml g++
+  ghc-options:         -Wall
+  extra-libraries:     stdc++, sass
 
 test-suite tests
   hs-source-dirs:      tests
   main-is:             Main.hs
   type:                exitcode-stdio-1.0
-  ghc-options:         -Wall -pgml g++
+  ghc-options:         -Wall
   build-depends:       base >= 4.7 && <4.8, hspec, hlibsass
   default-language:    Haskell2010
