--- a/hlibsass.cabal
+++ b/hlibsass.cabal
@@ -1,5 +1,5 @@
 name:                hlibsass
-version:             0.1.4.0
+version:             0.1.5.0
 license:             MIT
 license-file:        LICENSE
 author:              Jakub Fijałkowski <fiolek94@gmail.com>
@@ -18,15 +18,19 @@ description:
   For documentation visit <https://github.com/sass/libsass>.
 
 extra-source-files:
-  libsass/*.cpp
-  libsass/*.c
-  libsass/*.h
-  libsass/*.hpp
-  libsass/b64/*.h
-  libsass/posix/*.h
-  libsass/posix/*.c
-  libsass/utf8/*.h
+  libsass/src/*.cpp
+  libsass/src/*.c
+  libsass/src/*.h
+  libsass/src/*.hpp
+  libsass/src/*.am
+  libsass/src/b64/*.h
+  libsass/src/utf8/*.h
+  libsass/src/support/*.pc.in
+  libsass/include/*.h
+  libsass/include/sass/*.h
+  libsass/include/sass/*.h.in
   libsass/Makefile
+  libsass/Makefile.conf
   libsass/LICENSE
   libsass/VERSION
   CHANGELOG.md
