--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:
   - STACK_YAML=stack-lts-13.11.yaml UPDATE_NIGHTLY=NO
   - STACK_YAML=stack-lts-13.19.yaml UPDATE_NIGHTLY=NO
   - STACK_YAML=stack-lts-14.yaml    UPDATE_NIGHTLY=NO
+  - STACK_YAML=stack-lts-15.3.yaml  UPDATE_NIGHTLY=NO
   - STACK_YAML=stack.yaml           UPDATE_NIGHTLY=NO
   - STACK_YAML=stack-nightly.yaml   UPDATE_NIGHTLY=YES
 
