--- a/.github/workflows/haskell.yaml
+++ b/.github/workflows/haskell.yaml
@@ -19,13 +19,34 @@ jobs:
       matrix:
         stack_yaml:
           - stack.yaml
+          - stacks/stack-lts-24.11.yaml
+          - stacks/stack-lts-23.28.yaml
+          - stacks/stack-lts-22.44.yaml
+          - stacks/stack-lts-22.43.yaml
+          - stacks/stack-lts-22.27.yaml
+          - stacks/stack-lts-22.20.yaml
+          - stacks/stack-lts-22.6.yaml
+          - stacks/stack-lts-21.25.yaml
+          - stacks/stack-lts-21.21.yaml
+          - stacks/stack-lts-21.11.yaml
+          - stacks/stack-lts-21.7.yaml
+          - stacks/stack-lts-20.26.yaml
+          - stacks/stack-lts-20.24.yaml
+          - stacks/stack-lts-20.12.yaml
+          - stacks/stack-lts-20.11.yaml
+          - stacks/stack-lts-19.33.yaml
+          - stacks/stack-lts-18.28.yaml
+          - stacks/stack-lts-18.8.yaml
+          - stacks/stack-lts-18.6.yaml
+          - stacks/stack-lts-17.2.yaml
+          - stacks/stack-lts-16.31.yaml
+          - stacks/stack-lts-16.11.yaml
           - stacks/stack-lts-15.3.yaml
           - stacks/stack-lts-14.yaml
           - stacks/stack-lts-13.19.yaml
           - stacks/stack-lts-13.11.yaml
           - stacks/stack-lts-12.26.yaml
           - stacks/stack-lts-12.14.yaml
-          - stacks/stack-nightly.yaml
 
     steps:
     - uses: actions/checkout@v6
